trunk/NewArchive/a520465ed8ca7d7c84237dd3450542ec-6bd941bd569898d6f94f2545382ce976/output
+ g++ -std=c++11 -Wall -Wextra -pedantic -Wno-unused-variable -pthread main.cpp
main.cpp: In instantiation of ‘void ClassName<T>::some_method() [with T = int]’:
main.cpp:16:17:   required from here
main.cpp:8:7: error: static assertion failed: this one only for floats
       static_assert(std::is_floating_point<T>(), "this one only for floats");
       ^
